# QService

./: .gitignore  CMakeLists.txt
QService/: QService.cpp  QService.h
